Fixes spacing in vertical land ownership map

--- a/_sass/components/_data-map.scss
+++ b/_sass/components/_data-map.scss
@@ -119,6 +119,9 @@ eiti-data-map {
 
   .cell text {
     @include font-size(3 / 4);
+    
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
